# shexy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  shexy.1  uninstall_manifest.txt
include/: shexy.h
readmes/: README-es.md  README-jp.md  README-pt.md
src/: CMakeLists.txt  shexy.c
util/: CMakeLists.txt
util/args/include/: args.h
util/args/src/: CMakeLists.txt  args.c
util/color/include/: color.h
util/color/src/: CMakeLists.txt  color.c
util/utf8/include/: utf8.h
util/utf8/src/: CMakeLists.txt  utf8.c
